--- a/.github/myFirstWorkflow.yml
+++ b/.github/myFirstWorkflow.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          "echo Hello ${{WHO_TO_GREET}} from ${{github.actor}}"
-          "echo my secret is ${{MY_SECRET}}"
-          "echo The current branch is ${{github.ref}}"
+          echo "Hello ${{WHO_TO_GREET}} from ${{github.actor}}"
+          echo "my secret is ${{MY_SECRET}}"
+          echo "The current branch is ${{github.ref}}"
       - name: checkout
       - uses: action/checkout@v4.1.0
       - run: tree
