--- a/.github/myFirstWorkflow.yml
+++ b/.github/myFirstWorkflow.yml
@@ -1,22 +1,20 @@
-# practising my first github action
-name: my first workflow
+# A first workflow to play around with the editor
+name: My First Workflow
 on:
   push:
-    branches:
+    branches: 
       - main
   workflow_dispatch:
 
-
 jobs:
-  myFirstJob:
-    name: my first job
+  first_job:
+    name: My first job
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Hello ${{WHO_TO_GREET}} from ${{github.actor}}"
-          echo "my secret is ${{MY_SECRET}}"
-          echo "The current branch is ${{github.ref}}"
-      - name: checkout
+          echo "Hello ${{ vars.WHO_TO_GREET }} 👋 from ${{ github.actor }}." 
+          echo "My secret is 🤫 ${{ secrets.MY_SECRET }}."
+          echo "Current branch is '${{ github.ref }}'."
+      - name: Checkout
         uses: actions/checkout@v4.1.0
       - run: tree
-      
