--- a/.github/workflows/myfirtWorkflow.yml
+++ b/.github/workflows/myfirtWorkflow.yml
@@ -21,5 +21,37 @@ jobs:
         uses: actions/checkout@v4.1.0
       - run: tree
       
-        
-    
+     
+  Test:
+    runs-on: ubuntu-latest
+    environment: Test
+    needs: myFirstJob
+    steps:
+    - run: |
+        echo "Hello ${{ vars.WHO_TO_GREET }} 👋 from ${{ github.actor }}." 
+        sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+        echo "My secret is 🤫 '$sec'."
+      
+  Load-Test:
+    runs-on: ubuntu-latest
+    environment: Load-Test
+    needs: myFirstJob
+    steps:
+    - run: |
+        echo "Hello ${{ vars.WHO_TO_GREET }} 👋 from ${{ github.actor }}." 
+        sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+        echo "My secret is 🤫 '$sec'."
+        sleep 15
+      
+  Production:
+    runs-on: ubuntu-latest
+    environment: 
+      name: Production
+      url: https://writeabout.net
+    needs: [Test, Load-Test]
+    steps:
+    - run: |
+        echo "Hello ${{ vars.WHO_TO_GREET }} 👋 from ${{ github.actor }}." 
+        sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+        echo "My secret is 🤫 '$sec'."
+        sleep 15  
